# dorimtory_management_system

./: .gitignore  README.md  pyproject.toml
docs/: prompt.md  数据库课程设计要求及说明书_宿舍管理.doc
docs/conceptual_structural_design/: E-R_administrator.drawio.html  E-R_dormitory.drawio.html  E-R_final.drawio.html  README.md
docs/project_design/: README.md
docs/project_design/conceptual/: E-R_announcement.drawio.html  E-R_complaints.drawio.html  E-R_dorm_assign.drawio.html  E-R_dormitory.drawio.html  E-R_equipment.drawio.html  E-R_final.drawio.html  E-R_guests.drawio.html  E-R_pay_record.drawio.html  E-R_repair_record.drawio.drawio.html  E-R_student.drawio.html  README.md  detail_introduce.md
docs/project_design/logical/: README.md
docs/requirements_analysis/: README.md  background.md  data_integrity.md  data_proces.md  data_security.md  data_structure.md  performance_analysis.md
