[project]
name = "dorimtory_management_system"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mhenwa", email = "1986535482@qq.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
